Update common html

--- a/home.html
+++ b/home.html
@@ -62,11 +62,11 @@
 <body>
     <h1>Ôn thi giấy phép xe máy</h1>
     <div class="container">
-        <a href="hoc-ly-thuyet.html" class="card">
+        <a href="pages/user/theory_category.html" target="_blank" class="card">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT16grhJ4JRdTUCGIKKzekwFvIXvPJ-cxyP6g&s" alt="Học lý thuyết">
             <p>Học lý thuyết</p>
         </a>
-        <a href="bien-bao.html" class="card">
+        <a href="pages/common/traffic_sign.html" target="_blank" class="card">
             <img src="https://vnn-imgs-a1.vgcloud.vn/cdn.baogiaothong.vn/upload/images/2020-2/article_img/2020-05-23/bien-bao-cam-111a-1590225675-width224height224.jpg" alt="Biển báo">
             <p>Biển báo</p>
         </a>
@@ -74,7 +74,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/326/326909.png" alt="Thi sát hạch">
             <p>Thi sát hạch</p>
         </a>
-        <a href="meo-thi.html" target="_blank" class="card">
+        <a href="pages/common/tip.html" target="_blank" class="card">
             <img src="https://cdn-icons-png.flaticon.com/256/3771/3771432.png" alt="Mẹo thi">
             <p>Mẹo thi</p>
         </a>
