--- a/pages/common/traffic_sign.html
+++ b/pages/common/traffic_sign.html
@@ -27,76 +27,7 @@
         </div>
     </div>
 
-    <script>
-        // function showTab(tab) {
-        //     // Hide all content sections
-        //     document.getElementById('content-ban-cam').style.display = 'none';
-        //     document.getElementById('content-hieu-lenh').style.display = 'none';
-        //     document.getElementById('content-chi-dan').style.display = 'none';
-        //     document.getElementById('content-nguy-hiem').style.display = 'none';
-
-        //     // Remove 'active-tab' class from all tabs
-        //     document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active-tab'));
-
-        //     // Show the selected tab content
-        //     document.getElementById('content-' + tab).style.display = 'block';
-
-        //     // Add 'active-tab' class to the clicked tab
-        //     document.getElementById('tab-' + tab).classList.add('active-tab');
-        // }
-        
-        // axios.get(CATEGORY_API + "getCategoryByType/traffic_sign")
-        axios.get('http://localhost:5170/api/Categories/getCategoryByType/traffic_sign')
-            .then(response => {
-                const data = response.data;
-                const tabs = document.getElementById('tabs');
-                tabs.innerHTML = '';
-
-                data.forEach(category => {
-                    const tab = document.createElement('div');
-                    tab.classList.add('tab');
-                    tab.innerText = category.categoryName;
-                    tab.onclick = () => showTab(category.categoryId);
-
-                    tabs.appendChild(tab);
-                });
-
-
-                console.log(response.data); // Xử lý dữ liệu API
-            })
-            .catch(error => {
-                console.error('Error:', error); // Xử lý lỗi
-            });
-
-        function showTab(categoryId) {
-            axios.get('http://localhost:5170/api/TrafficSigns/getByCategory/' + categoryId)
-                .then(response => {
-                    const data = response.data;
-                    const content = document.getElementById('content');
-                    content.innerHTML = '';
-
-                    data.forEach(sign => {
-                        const signElement = document.createElement('div');
-                        signElement.classList.add('warning-sign');
-                        signElement.innerHTML = `
-                            <img src="${sign.imageUrl}" alt="${sign.trafficSignTitle}">
-                            <div>
-                                <h3>${sign.trafficSignTitle}</h3>
-                                <p class="description">${sign.trafficSignContent}</p>
-                            </div>
-                        `;
-
-                        content.appendChild(signElement);
-                    });
-
-                    console.log(response.data); // Xử lý dữ liệu API
-                })
-                .catch(error => {
-                    console.error('Error:', error); // Xử lý lỗi
-                });
-        }
-    </script>
-    <script src="../../js/common/traffic_sign.js"></script>
+    <script src="../../js/common/traffic_sign.js" type="module"></script>
 </body>
 
 </html>
