[New] create new page

--- a/pages/user/theory_category.html
+++ b/pages/user/theory_category.html
@@ -67,11 +67,11 @@
 <body>
     <h1>Học lý thuyết</h1>
     <div class="container" id="tabs">
-        <a href="pages/user/theory_category.html" target="_blank" class="card">
+        <!-- <a href="pages/user/theory_category.html" target="_blank" class="card">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT16grhJ4JRdTUCGIKKzekwFvIXvPJ-cxyP6g&s"
                 alt="Học lý thuyết">
             <p>Học lý thuyết</p>
-        </a>
+        </a> -->
     </div>
 
     <script src="../../js/user/theory_category.js" type="module"></script>
