--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
             <img src="https://vnn-imgs-a1.vgcloud.vn/cdn.baogiaothong.vn/upload/images/2020-2/article_img/2020-05-23/bien-bao-cam-111a-1590225675-width224height224.jpg" alt="Biển báo">
             <p>Biển báo</p>
         </a>
-        <a href="thi-sat-hach.html" class="card">
+        <a href="pages/user/exam_list.html" target="_blank" class="card">
             <img src="https://cdn-icons-png.flaticon.com/512/326/326909.png" alt="Thi sát hạch">
             <p>Thi sát hạch</p>
         </a>
