--- a/pages/user/theory_question.html
+++ b/pages/user/theory_question.html
@@ -241,6 +241,7 @@
         });
 
         function loadPracticeHistories() {
+            console.log(userId);
             $.ajax({
                 url: `${ROOT_API}/api/PracticeHistory/getByUser/${userId}`,
                 method: 'GET',
